submit notebook only

--- a/futures_spreads.ipynb
+++ b/futures_spreads.ipynb
@@ -11,6 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Utility Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# <include-futures_spreads/utils.py>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Imports"
    ]
   },
@@ -35,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-30T15:35:41.532994Z",
@@ -44,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
+    "# <imports>\n",
     "import sqlite3\n",
     "\n",
     "import numpy as np\n",
@@ -52,9 +68,7 @@
     "from tqdm.notebook import trange\n",
     "from futures_spreads import utils\n",
     "\n",
-    "pd.options.plotting.backend = \"plotly\"\n",
-    "\n",
-    "# os.environ[\"QUANDL_API_KEY\"] = "
+    "pd.options.plotting.backend = \"plotly\""
    ]
   },
   {
@@ -34862,16 +34876,8 @@
    "name": "python385jvsc74a57bd00121216ccabd5da4715a48556407ce0facf6f96a2b6c5962e2d9456b1150712c"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": ""
   }
  },
  "nbformat": 4,
