fix notebook title

--- a/spread_trading.ipynb
+++ b/spread_trading.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Futures Spreads"
+    "# Spread Trading"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use groupby to create rows that include dte, dtt and future."
+    "Use groupby to create rows that include columns for each series."
    ]
   },
   {
@@ -47500,16 +47500,8 @@
    "name": "python385jvsc74a57bd0ff26574e3122a69441f5ef4598a710afb5e6c7b551639a2f037edab7e2164938"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": ""
   }
  },
  "nbformat": 4,
